# pasteCLI

./: CMakeLists.txt  README.md
src/: init.txt  main.cpp
src/core/: App.cpp  App.h  CommandLineParser.cpp  CommandLineParser.h  HTTPClient.cpp  HTTPClient.h
